@startuml

title __LABORATORIO2COLECCIONES's Class Diagram__\n

  namespace Client {
    class Client.ClientApp {
    }
  }
  

  namespace Client {
    class Client.CommandReader {
    }
  }
  

  namespace Client {
    class Client.CommandSender {
    }
  }
  

  namespace Client {
    class Client.CommunicationClient {
    }
  }
  

  namespace Client {
    class Client.FileReader {
    }
  }
  

  namespace Client {
    class Client.MovieReader {
    }
  }
  

  namespace Entidades {
    enum Color {
    }
  }
  

  namespace Entidades {
    class Entidades.Coordinates {
    }
  }
  

  namespace Entidades {
    class Entidades.Location {
    }
  }
  

  namespace Entidades {
    class Entidades.Movie {
    }
  }
  

  namespace Entidades {
    enum MpaaRating {
    }
  }
  

  namespace Entidades {
    class Entidades.Person {
    }
  }
  

  namespace Server {
    class Server.CommunicationServer {
    }
  }
  

  namespace Server {
    class Server.CsvReader {
    }
  }
  

  namespace Server {
    class Server.KeyboardHandler {
    }
  }
  

  namespace Server {
    class Server.ProcessHandler {
    }
  }
  

  namespace Server {
    class Server.ServerApp {
    }
  }
  

  namespace Shared {
    class Shared.Command {
    }
  }
  

  namespace Shared {
    enum CommandType {
    }
  }
  

  namespace Shared {
    class Shared.DataBox {
    }
  }
  

  namespace Shared {
    class Shared.DataBoxHandler {
    }
  }
  

  namespace Shared {
    class Shared.SerializationHandler {
    }
  }
  

  namespace Shared {
    class Shared.SizeMessage {
    }
  }
  

  Entidades.Color .up.|> java.io.Serializable
  Entidades.Coordinates .up.|> java.io.Serializable
  Entidades.Location .up.|> java.io.Serializable
  Entidades.Movie .up.|> java.io.Serializable
  Entidades.Movie .up.|> java.lang.Comparable
  Entidades.Movie o-- Entidades.Coordinates : coordinates
  Entidades.Movie o-- Entidades.MpaaRating : mpaaRating
  Entidades.Movie o-- Entidades.Person : operator
  Entidades.MpaaRating .up.|> java.io.Serializable
  Entidades.Person .up.|> java.io.Serializable
  Entidades.Person o-- Entidades.Color : eyeColor
  Entidades.Person o-- Entidades.Location : location
  Server.KeyboardHandler .up.|> java.lang.Runnable
  Shared.Command .up.|> java.io.Serializable
  Shared.Command o-- Shared.CommandType : commandType
  Shared.Command o-- Shared.DataBox : dataCommand
  Shared.CommandType .up.|> java.io.Serializable
  Shared.DataBox .up.|> java.io.Serializable
  Shared.DataBox o-- Entidades.Movie : movie
  Shared.SizeMessage .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
